# AI-PoweredFitnessApplication

./: .gitignore  README.md  build.gradle  login.json  package-lock.json  package.json  settings.gradle
activityservice/: pom.xml
activityservice/src/main/java/com/fitness/activityservice/config/: RabbitMqconfig.java  WebClientConfig.java
activityservice/src/main/java/com/fitness/activityservice/controller/: ActivityController.java
activityservice/src/main/resources/: application.yml
ai_model/: TRAINING_GUIDE.md  main.py  models.py  pyproject.toml  rag_service.py  requirements.txt
ai_model/conversation/: __init__.py  continual_learning.py  memory.py
ai_model/data/chromadb/: chroma.sqlite3
ai_model/knowledge/: __init__.py  knowledge_base.py
ai_model/model/: __init__.py  inference.py
ai_model/training/: __init__.py  dataset.py  prepare_data.py  train.py
aiservice/: build.gradle  pom.xml
aiservice/src/main/resources/: application.yml
configserver/src/main/resources/config/: ai-service.yml  user-service.yml
eureka/src/main/resources/: application.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Navbar.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: AICoach.jsx  Activities.jsx  Dashboard.jsx  Login.jsx  Profile.jsx  Register.jsx
frontend/src/services/: api.js
gateway/: build.gradle
gateway/src/main/resources/: application.yml
userservice/: build.gradle  pom.xml
userservice/src/main/resources/: application.yml
(+35 files in other folders)
